# DevLaunch

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  README.md  jest.config.js  package.json  tsconfig.json
apps/backend/docs/: wallet-api.md
apps/backend/src/: app.ts  index.ts
apps/backend/src/config/: github.ts  index.ts  swagger.ts
apps/backend/src/controllers/: adminController.ts  githubController.ts  projectController.ts  token.controller.ts  tokenController.ts  userController.ts  walletController.ts
apps/backend/src/middleware/: auth.ts  rateLimit.ts  validateRequest.ts
apps/backend/src/middlewares/: validateRequest.ts
apps/backend/src/models/: Project.ts  User.ts  token.model.ts  transaction.model.ts  user.model.ts
apps/backend/src/routes/: admin.ts  github.ts  projects.ts  pumpfun.ts  token.routes.ts  tokens.ts  users.ts  wallet.ts
apps/backend/src/scripts/: deploy.sh  seed.ts
apps/backend/src/services/: pumpfun.service.ts  token.service.ts
apps/backend/src/types/: token.types.ts
apps/backend/src/utils/: logger.ts  solana.ts  validators.ts
apps/backend/tests/integration/: api.test.ts  wallet.test.ts
apps/backend/tests/unit/: walletController.test.ts
apps/frontend/: next.config.js  package.json  tailwind.config.js
apps/frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  FormProvider.tsx  I18nProvider.tsx  LanguageSwitcher.tsx  Layout.tsx  (+8 more)
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/tests/: create_template.rs
(+61 files in other folders)
