[package]
name = "devlaunch-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the DevLaunch platform"

[lib]
crate-type = ["cdylib", "lib"]
name = "devlaunch_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.43"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0" 